@@ -1,12 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><head>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
   <meta name="generator" content="HTML Tidy, see www.w3.org" />
-  
-  <title>Installing and Using CoffeeMud 5.9</title><link rel="StyleSheet" href="style.css" type="text/css" media="screen" /><!-- Modified by Josh Mueller, 2006-5-5, fix validation problems, add index, and fix spelling errors --></head>
-
+  <title>Installing and Using CoffeeMud 5.9</title>
+  <link rel="StyleSheet" href="style.css" type="text/css" media="screen" />
+<!-- Modified by Josh Mueller, 2006-5-5, fix validation problems, add index, and fix spelling errors -->
+</head>
 <body>
 <center>
-<table border="1" bordercolor="gray" cellpadding="5" cellspacing="0" width="100%">
+<table border="1" bordercolor="gray" cellpadding="5" cellspacing="0"
+ width="100%">
   <tbody>
     <tr>
       <td colspan="2" align="left" bgcolor="#dfdfdf" width="100%">
@@ -37,9 +40,14 @@
           </ul>
         </li>
         <li><a href="#shutdown">Offline/ Shutdown</a></li>
+        <li>Bonus Features</li>
+        <ul>
+          <li><a href="#twitter">Twitter Installation</a></li>
+        </ul>
       </ul>
       </td>
-      <td align="left" valign="top"> <img src="images/zip.jpg" alt="unzipping" />
+      <td align="left" valign="top"> <img src="images/zip.jpg"
+ alt="unzipping" />
       <h2><a name="installation">Installation</a></h2>
       <p>The first and most critical step in installing CoffeeMud 5.9
 is to make sure that you have downloaded and installed the latest
@@ -124,7 +132,8 @@ engine, you should do the following:</p>
         <li>Go through the <a href="../coffeemud.ini">coffeemud.ini</a>
 file, and use the <a href="MUDGrinder.html">MudGrinders</a> Control
 Panel.</li>
-        <li style="list-style-type: none; list-style-image: none; list-style-position: outside;">
+        <li
+ style="list-style-type: none; list-style-image: none; list-style-position: outside;">
           <ul>
             <li>Set your DOMAIN field</li>
           </ul>
@@ -386,7 +395,8 @@ A value of "TRUE" will turn on the I3 server and make the connection.</p>
         <li> <span class="bold">I3PORT</span>
           <p>This is the TCP/IP port number which the main InterMud3
 server will listen on. By default the setting is 27766. If you would
-like to change this number to some other port, you may do so. If the <span class="bold">RUNI3SERVER</span> entry above is FALSE, this setting
+like to change this number to some other port, you may do so. If the <span
+ class="bold">RUNI3SERVER</span> entry above is FALSE, this setting
 will have no effect.</p>
         </li>
         <li> <span class="bold">I3CHANNELS</span>
@@ -408,7 +418,8 @@ Even if you don't wish to publish any of your MUDs information to the
 web, you may want to run the Admin web server so that you can use the
 MUDGrinder area editing tool. See the <a href="MUDGrinder.html">MUDGrinder
 Guide</a> for more information on this tool. For more information on
-the CoffeeMud web server in general, please read the <a href="WebServer.html">WebServer Guide</a>.</p>
+the CoffeeMud web server in general, please read the <a
+ href="WebServer.html">WebServer Guide</a>.</p>
         </li>
         <li> <span class="bold">RUNSMTPSERVER</span>
           <p>This setting tells CoffeeMud whether to start up the
@@ -470,7 +481,8 @@ trivial query.</p>
 and settings which allow you to better customize your CoffeeMud. Make
 sure you check out the Control Panel feature in the MUDGrinder to
 modify most of&nbsp;them.</p>
-      <p><img style="width: 73px; height: 73px;" src="images/sprockets.jpg" alt="packages" /> </p>
+      <p><img style="width: 73px; height: 73px;"
+ src="images/sprockets.jpg" alt="packages" /> </p>
       <h2><a name="multihosts">Multiple Hosts</a></h2>
       <p>There may be circumstances under which you may want to run
 your mud not only on multiple ports, but with multiple configurations,
@@ -610,7 +622,8 @@ also contains the <code>pub/images</code> to store image files
 displayed by the public web pages, as well as the <code>pub/sounds</code>
 directory where MSP sound files are stored for players to access.</p>
       <p>The directory <span style="font-family: monospace;">pub/images/mxp</span>
-contains all of the MXP displayable images, including the file <span style="font-family: monospace;">pub/images/mxp/intro.jpg</span>,
+contains all of the MXP displayable images, including the file <span
+ style="font-family: monospace;">pub/images/mxp/intro.jpg</span>,
 which is the image displayed when players who have MXP compliant mud
 clients log into your mud. To use multiple/random intros, just insert
 numbers before the extension for additional ones (intro1.jpg,
@@ -628,7 +641,8 @@ files found in the resources directory are:</p>
         <tbody>
           <tr>
             <td>achievements.ini</td>
-            <td>The configuration file for the Achievements system. Edit away!</td>
+            <td>The configuration file for the Achievements system.
+Edit away!</td>
           </tr>
           <tr>
             <td>chat.dat</td>
@@ -1109,6 +1123,10 @@ Joke skill<br />
             </td>
           </tr>
           <tr>
+            <td>siegecraft.txt</td>
+            <td>Recipes for the Siegecraft skill</td>
+          </tr>
+          <tr>
             <td valign="top">smelting.txt</td>
             <td valign="top">Recipes for the Smelting skill<br />
             </td>
@@ -1159,7 +1177,8 @@ follows:</p>
           <tr>
             <td valign="top">blocked.txt<br />
             </td>
-            <td valign="top">A file shown to someone permanently blocked.<br />
+            <td valign="top">A file shown to someone permanently
+blocked.<br />
             </td>
           </tr>
           <tr>
@@ -1169,7 +1188,8 @@ follows:</p>
           <tr>
             <td valign="top">connblocked.txt<br />
             </td>
-            <td valign="top">A file shown to someone temporarily blocked.<br />
+            <td valign="top">A file shown to someone temporarily
+blocked.<br />
             </td>
           </tr>
           <tr>
@@ -1467,7 +1487,9 @@ folder.&nbsp;<code>.</code></p>
 above to the classpath string. &nbsp;For example:</li>
         <ul>
           <li><span style="font-family: monospace;">java -classpath
-".;.\lib\js.jar;.\lib\jzlib.jar;.\lib\</span><span style="font-family: monospace;">mysql-connector-java-5.1.6-bin.jar</span><span style="font-family: monospace;">" -Xms64m ....</span></li>
+".;.\lib\js.jar;.\lib\jzlib.jar;.\lib\</span><span
+ style="font-family: monospace;">mysql-connector-java-5.1.6-bin.jar</span><span
+ style="font-family: monospace;">" -Xms64m ....</span></li>
           <li>** Your version of the connector jar file may vary!</li>
         </ul>
         <li>
@@ -1479,13 +1501,16 @@ launch the mud.bat.</p>
 CoffeeMud on a UN*X or Linux machine</a></h3>
       <ul>
         <li>
-          <p>Download and install mysql from <a href="http://www.mysql.com/downloads/index.html">http://www.mysql.com/downloads/index.html</a>.
+          <p>Download and install mysql from <a
+ href="http://www.mysql.com/downloads/index.html">http://www.mysql.com/downloads/index.html</a>.
 Make sure mysqld is being run at boot time, and not by the root user.</p>
         </li>
         <li>
-          <p>Download and install the mysql jdbc api from <a href="http://www.mysql.com/downloads/api-jdbc-stable.html">http://www.mysql.com/downloads/api-jdbc-stable.html</a>.
+          <p>Download and install the mysql jdbc api from <a
+ href="http://www.mysql.com/downloads/api-jdbc-stable.html">http://www.mysql.com/downloads/api-jdbc-stable.html</a>.
 Extract the .tar.gz file to a temporary directory. Then copy the
-extracted driver JAR file into your <span style="font-family: monospace;">/CoffeeMud/lib</span> directory.</p>
+extracted driver JAR file into your <span
+ style="font-family: monospace;">/CoffeeMud/lib</span> directory.</p>
         </li>
         <li>Open up the mudUNIX.sh file and add the name of the JAR
 file above to the classpath string. &nbsp;For example:</li>
@@ -1494,7 +1519,8 @@ file above to the classpath string. &nbsp;For example:</li>
 -classpath
 ".:./lib/js.jar:./lib/jzlib.jar:./lib/mysql-connector-java-5.1.6-bin.jar"
 -Xms65535000 ....</span></li>
-          <li>** Your version of the connector jar file may vary!<span style="font-family: monospace;"><br />
+          <li>** Your version of the connector jar file may vary!<span
+ style="font-family: monospace;"><br />
             </span></li>
         </ul>
         <li>
@@ -1583,7 +1609,8 @@ killConnections()</code> function.</p>
 with CoffeeMud</a></h3>
       <ul>
         <li> Get the database software
-          <p>Go to <a href="http://db.apache.org/derby/derby_downloads.html">http://db.apache.org/derby/derby_downloads.html</a>
+          <p>Go to <a
+ href="http://db.apache.org/derby/derby_downloads.html">http://db.apache.org/derby/derby_downloads.html</a>
 and download the distribution( lib or bin, unless you want to build the
 whole project ).</p>
         </li>
@@ -1655,7 +1682,8 @@ Path&gt;\doc\pdf\tuning.pdf.</p>
       </ul>
       <br />
       <br />
-      <img src="images/nuked.jpg" alt="offline and shutdown applications" />
+      <img src="images/nuked.jpg"
+ alt="offline and shutdown applications" />
       <h2><a name="shutdown">The OffLine And Shutdown Applications</a></h2>
       <p>In the off chance you should need to keep your mud down while
 database, or other software (or hardware?) maintenance is going on, a
@@ -1679,10 +1707,72 @@ include the word 'true' if you wish the system to reboot instead of
 simply shutting down. To execute this application, you should go into
 your coffeemud directory or wherever the "com" directory for CoffeeMud
 is located, and enter:</p>
-      <pre>java com.planet_ink.coffee_mud.application.Shutdown localhost 5555 AdminName AdminPassword<br /></pre>
+      <pre>java com.planet_ink.coffee_mud.application.Shutdown localhost 5555 AdminName AdminPassword<br /><br /><br /><br /><br /></pre>
+      <hr style="width: 100%; height: 2px;" />
+      <h2><a name="twitter">Twitter Installation</a></h2>
+      <p>CoffeeMud supports sending standard chat channel messages,
+which you have configured properly in your coffeemud.ini, to a twitter
+account. &nbsp;A specific channel may be specified for this purpose,
+and can be set up so that only administrators may write to them.
+&nbsp;You won't find the instructions for doing this anywhere else, so
+please follow closely.</p>
+      <ol>
+        <li>Download "twitter4j" from <a href="http://twitter4j.org/">http://twitter4j.org/</a></li>
+        <li>Unzip the twitter4j package.&nbsp;</li>
+        <li>Inside the twitter4j package is a directory called "<span
+ style="font-family: monospace;">lib</span>", and inside that is a file
+called "<span style="font-family: monospace;">twitter4j-core-?.?.?.jar</span>".
+&nbsp;Copy this file to your <span style="font-family: monospace;">CoffeeMud\lib</span>
+directory, so that it sits alongside <span
+ style="font-family: monospace;">js.jar</span> and <span
+ style="font-family: monospace;">jzlib.jar</span>.&nbsp;</li>
+        <li>If you are using windows, open up the "mud.bat" file in
+your CoffeeMud directory, or the "mudUNIX.sh" file if using linux or
+mac&nbsp; into a text editor and add a reference to the twitter4j jar
+file you added in step 3. &nbsp;If you don't know how to do this, well,
+it gets rougher from here, but you will need to look up how to add jar
+files to the java executeable classpath from the command line.</li>
+        <li>Now, go to twitter.com , log in. &nbsp;Then go to <a
+ href="https://apps.twitter.com/">https://apps.twitter.com/</a> and
+register a new application. &nbsp;You will need to obtain 4 different
+garbly strings. The first two are obtained by following the application
+creation steps. &nbsp;The last two come when you "authorize" access to
+your twitter account on behalf of the application.</li>
+        <ol>
+          <li>OAuth Consumer Key</li>
+          <li>OAuth Consumer Secret</li>
+          <li>OAuth Access Token&nbsp;</li>
+          <li>OAuth Access Token Secret</li>
+        </ol>
+        <li>Open up your CoffeeMud/coffeemud.ini file and add the
+following entries down at the bottom:<br />
+          <span style="font-family: monospace;">TWITTER-OAUTHCONSUMERKEY=Your
+OAuth Consumer Key<br />
+TWITTER-OAUTHCONSUMERSECRET=Your OAuth Consumer Secret</span><br
+ style="font-family: monospace;" />
+          <span style="font-family: monospace;">TWITTER-OAUTHACCESSTOKEN=Your-Oauth
+Access Token</span><br style="font-family: monospace;" />
+          <span style="font-family: monospace;">TWITTER-OAUTHACCESSTOKENSECRET=Your
+Access Token Secret</span></li>
+        <li><span style="font-family: monospace;" />Now, still in the
+coffeemud.ini file, find the entry for "CHANNELS= &nbsp;..." &nbsp;Find
+the name of the channel you want to tweet from. &nbsp;When you've found
+it, put a space and the word <span
+ style="font-family: Courier New,Courier,monospace;">TWITTER </span>after
+the name of the channel, and before the next comma or end of string.
+&nbsp;Any channels with the word TWITTER in their flags list will send
+their messages to the twitter feed. &nbsp;Use the other options and
+flags to limit access to this channel so that your players can't use it.</li>
+        <li>Save the coffeemud.ini file and restart your mud.<br
+ style="font-family: monospace;" />
+        </li>
+      </ol>
+      <p></p>
+      <p></p>
       </td>
     </tr>
   </tbody>
 </table>
 </center>
-</body></html>
+</body>
+</html>
