@@ -7,6 +7,8 @@
    6. Common Skills now support INFO argument to get info on recipe items.
    7. New Area type: SubThinInstance, for making instance copies of existing areas.
    8. EQUIP LONG now shows all items being worn and tattoos, even at other layers.
+   9. CoffeeMud now supports Twitter.  See the end of the Installation Guide.
+   
 # Build 5.9.3 Released 05/08/2016
    1. Follower behavior now has a few more options.
    2. STAT [MOBNAME] will now give full editor stats also, and 
